👙 [FRONTEND] ajout du widget dans la popin

--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -14,4 +14,5 @@
 // modules
 @import './layouts/base.scss';
 @import './layouts/theme.scss';
+@import './layouts/zindex.scss';
 @import './layouts/shadowliner.scss';
