--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -217,7 +217,6 @@ body:not(.unsubscribe-page) #top-container {
 #main-navigation {
   $time: 0.5s;
 
-  z-index: 99999;
   transition-duration: $time;
   background-color: transparent;
   transition-property: background-color, padding;
@@ -347,4 +346,44 @@ body:not(.unsubscribe-page) #top-container {
 
 #main-footer a {
   text-decoration: underline;
+}
+
+#demo-popup {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+
+  .overlay,
+  .container {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition-duration: 0.5s;
+    transition-property: opacity;
+  }
+
+  .overlay {
+    background-color: rgba(0, 0, 0, 0.65);
+  }
+
+  .container {
+    display: flex;
+    align-items: center;
+    transition-delay: 0.5s;
+    justify-content: center;
+  }
+
+  .inner {
+    @extend .px20;
+
+    width: 80%;
+    height: 80%;
+    position: relative;
+    border-radius: 4px;
+    box-sizing: content-box;
+    background-color: #FFFFFF;
+  }
 }
