🚧 [FRONTEND] update du wording des lames

--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -377,7 +377,7 @@ body:not(.unsubscribe-page) #top-container {
   }
 
   .inner {
-    @extend .px20;
+    @extend .p20;
 
     width: 80%;
     height: 80%;
