🚧 [FRONTEND] fix de l'image de background du top-container pour firefox

--- a/frontend/scss/layouts/theme.scss
+++ b/frontend/scss/layouts/theme.scss
@@ -151,6 +151,10 @@ span.error {
   }
 }
 
+#top-container {
+  background-color: $color-disabled;
+}
+
 #main-navigation.issticky {
   background-color: $white;
 }
