--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -207,11 +207,9 @@ figure {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-}
-
-body:not(.unsubscribe-page) #top-container {
-  // Photo by Dominik Martin on Unsplash
-  background-image: url('https://source.unsplash.com/YuVzPOBuuf0');
+  // photoby Dominik Martin on Unsplash
+  // https://unsplash.com/photos/YuVzPOBuuf0
+  background-image: url('/static/dominik-martin-675-unsplash.jpg');
 }
 
 #main-navigation {
