🚧 [WIDGET] update des font icons

--- a/widget/src/static/fontello/css/fontello-codes.css
+++ b/widget/src/static/fontello/css/fontello-codes.css
@@ -16,5 +16,6 @@
 .icon-location:before { content: '\e80e'; } /* '' */
 .icon-reply:before { content: '\e80f'; } /* '' */
 .icon-check:before { content: '\e810'; } /* '' */
+.icon-emo-unhappy:before { content: '\e811'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-marquee:before { content: '\e847'; } /* '' */
