--- a/widget/src/static/fontello/css/fontello.css
+++ b/widget/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?38927160');
-  src: url('../font/fontello.eot?38927160#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?38927160') format('woff2'),
-       url('../font/fontello.woff?38927160') format('woff'),
-       url('../font/fontello.ttf?38927160') format('truetype'),
-       url('../font/fontello.svg?38927160#fontello') format('svg');
+  src: url('../font/fontello.eot?92457244');
+  src: url('../font/fontello.eot?92457244#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?92457244') format('woff2'),
+       url('../font/fontello.woff?92457244') format('woff'),
+       url('../font/fontello.ttf?92457244') format('truetype'),
+       url('../font/fontello.svg?92457244#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?38927160#fontello') format('svg');
+    src: url('../font/fontello.svg?92457244#fontello') format('svg');
   }
 }
 */
@@ -72,5 +72,6 @@
 .icon-location:before { content: '\e80e'; } /* '' */
 .icon-reply:before { content: '\e80f'; } /* '' */
 .icon-check:before { content: '\e810'; } /* '' */
+.icon-emo-unhappy:before { content: '\e811'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-marquee:before { content: '\e847'; } /* '' */
