--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -21,7 +21,6 @@ form {
     width: 100%;
     height: 100%;
     position: absolute;
-    background: rgba(0, 0, 0, 0.25);
   }
 
   .container {
@@ -44,7 +43,6 @@ form {
   .navigation button {
     width: 170px;
     border-radius: 4px;
-    background-color: rgba(255, 255, 255, 1);
   }
 }
 
@@ -54,12 +52,25 @@ form {
 }
 
 #assec-widget {
+  @extend .p20;
+
   width: 100vw;
   height: 100vh;
   min-width: 200px;
   overflow: hidden;
   min-height: 350px;
   position: relative;
+  border-radius: 4px;
+}
+
+#assec-widget-event-window {
+  flex: 1;
+  display: flex;
+  min-width: 100%;
+  min-height: 100%;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #assec-widget-summary {
