--- a/widget/src/scss/layouts/theme.scss
+++ b/widget/src/scss/layouts/theme.scss
@@ -74,6 +74,26 @@ body {
  MAP
 
 ------------------------------------------------ */
+.assec-widget-popin {
+  .overlay,
+  .overlay.dark {
+    background: rgba(0, 0, 0, 0.25);
+  }
+
+  .overlay.light {
+    background: rgba(255, 255, 255, 0.85);
+  }
+
+  .navigation button {
+    background-color: rgba(255, 255, 255, 1);
+  }
+}
+
+/* ------------------------------------------------
+
+ MAP
+
+------------------------------------------------ */
 
 .leaflet-map-controls button {
   color: $header2;
