--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -6,6 +6,10 @@ form {
   display: flex;
 }
 
+button.small {
+  font-size: 0.7em;
+}
+
 .shadowed {
   box-shadow: 0 0 45px 0 rgba(0, 0, 0, 0.25);
 }
@@ -106,14 +110,6 @@ form {
 
   .container > * {
     display: block;
-  }
-
-  .bar {
-    background-color: #000000;
-  }
-
-  .thumb {
-    background-color: #ACE539;
   }
 }
 
