--- a/widget/src/scss/layouts/form.scss
+++ b/widget/src/scss/layouts/form.scss
@@ -2,3 +2,19 @@
   width: 100%;
   height: 100%;
 }
+
+.choice-input {
+  @extend .flex-rows;
+
+  label {
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #CCCCCC;
+
+    span,
+    input[type='radio'] {
+      font-size: 1.4em;
+      line-height: 1.4em;
+    }
+  }
+}
