--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -6,10 +6,6 @@ form {
   display: flex;
 }
 
-button.small {
-  font-size: 0.7em;
-}
-
 .shadowed {
   box-shadow: 0 0 45px 0 rgba(0, 0, 0, 0.25);
 }
@@ -56,8 +52,7 @@ button.small {
 }
 
 #assec-widget {
-  @extend .p20;
-
+  padding: 20px;
   width: 100vw;
   height: 100vh;
   min-width: 200px;
@@ -120,6 +115,8 @@ button.small {
 }
 
 #assec-widget-survey {
-  flex: 1;
-  display: flex;
+  width: 100%;
+  height: 100%;
+  // min-width: 100%;
+  // min-height: 100%;
 }
