--- a/widget/src/scss/layouts/form.scss
+++ b/widget/src/scss/layouts/form.scss
@@ -1,6 +1,8 @@
 .input-type-map {
   width: 100%;
   height: 100%;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .list-input {
@@ -13,14 +15,11 @@
 
 .choice-input {
   label {
-    padding: 20px;
-    border-radius: 20px;
-    background-color: #CCCCCC;
-
-    span,
-    input[type='radio'] {
-      font-size: 1.4em;
-      line-height: 1.4em;
-    }
+    padding: 12px;
+    display: block;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 4px;
+    border-color: #CCCCCC;
   }
 }
