🚧 [WIDGET] ajout du bandeau indiquant que le widget est en mode démo

--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -10,6 +10,15 @@ form {
   box-shadow: 0 0 45px 0 rgba(0, 0, 0, 0.25);
 }
 
+.note {
+  width: 100%;
+  padding: 12px;
+  font-size: 0.8em;
+  border-width: 1px;
+  border-radius: 4px;
+  border-style: solid;
+}
+
 .assec-widget-popin {
   top: 0;
   left: 0;
