🚧 [WIDGET] ajout du bouton pour fermer la popup

--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -384,4 +384,11 @@ figure {
     box-sizing: content-box;
     background-color: #FFFFFF;
   }
+
+  .close-popup-button {
+    top: 4%;
+    right: 8%;
+    position: absolute;
+    background: transparent;
+  }
 }
