--- a/widget/src/scss/styles.scss
+++ b/widget/src/scss/styles.scss
@@ -11,13 +11,14 @@
 // application
 @import './layouts/z-index.scss';
 @import './layouts/base.scss';
-@import './layouts/form.scss';
 @import './layouts/theme.scss';
-@import './layouts/tippy.scss';
+
+// @import './layouts/form.scss';
+// @import './layouts/tippy.scss';
 
 // map
-@import './layouts/map.scss';
-@import './layouts/map-marker.scss';
+// @import './layouts/map.scss';
+// @import './layouts/map-marker.scss';
 
 // responsive
-@import './layouts/responsive.scss';
+// @import './layouts/responsive.scss';
