--- a/widget/src/scss/_base.scss
+++ b/widget/src/scss/_base.scss
@@ -14,6 +14,7 @@ body {
 body {
   color: #000000;
   font-size: 12px;
+  line-height: 1.1em;
   font-family: Helvetica, Arial, Verdana, sans-serif;
 }
 
@@ -92,14 +93,14 @@ h6 {
 
 .clearfix::after,
 .clearfix::before {
-  content: '.';
-  display: block;
-  overflow: hidden;
-  visibility: hidden;
-  font-size: 0;
-  line-height: 0;
   width: 0;
   height: 0;
+  content: '.';
+  font-size: 0;
+  display: block;
+  line-height: 0;
+  overflow: hidden;
+  visibility: hidden;
 }
 
 .clearfix::after {
@@ -114,6 +115,13 @@ h6 {
   float: right;
 }
 
+.relative {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.fixed,
 .absolute {
   top: 0;
   left: 0;
@@ -122,10 +130,8 @@ h6 {
   position: absolute;
 }
 
-.relative {
-  width: 100%;
-  height: 100%;
-  position: relative;
+.fixed {
+  position: fixed;
 }
 
 .noborder {
@@ -144,12 +150,12 @@ h6 {
   overflow: hidden !important;
 }
 
-.scrollx {
+.scroll-x-only {
   overflow-y: hidden !important;
   overflow-x: scroll !important;
 }
 
-.scrollx-y {
+.scroll-y-only {
   overflow-x: hidden !important;
   overflow-y: scroll !important;
 }
@@ -166,9 +172,13 @@ h6 {
 
 .cover {
   background-size: cover;
-  // background-color: #DDD;
+  background-color: #F1F1F1;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.shadowed {
+  box-shadow: 0 0 45px 0 rgba(0, 0, 0, 0.25);
 }
 
 /* --------------------------------------------
