--- a/widget/src/scss/_form.scss
+++ b/widget/src/scss/_form.scss
@@ -16,11 +16,11 @@
   cursor: default;
 }
 
-form {
-  width: 100%;
-  height: 100%;
-  display: block;
-}
+// form {
+//   width: 100%;
+//   height: 100%;
+//   display: block;
+// }
 
 input,
 label,
@@ -30,25 +30,26 @@ textarea {
   margin: 0;
   border: 0;
   padding: 0;
-  line-height: 1;
   background: none;
   white-space: normal;
   display: inline-block;
   vertical-align: middle;
 
   /* Browsers have different default form fonts */
-  font-size: 13px;
-  font-family: 'arial', sans-serif;
+  color: #000000;
+  font-size: 12px;
+  line-height: 1.1em;
+  font-family: Helvetica, Arial, Verdana, sans-serif;
 }
 
-input,
-textarea {
-  box-sizing: content-box;
-}
+// input,
+// textarea {
+//   box-sizing: content-box;
+// }
 
-input:focus {
-  outline: 0;
-}
+// input:focus {
+//   outline: 0;
+// }
 
 input[type='radio'],
 input[type='checkbox'] {
