--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -1,13 +1,38 @@
 body {
+  font-size: 14px;
+  background-color: rgba(255, 255, 255, 0);
+  font-family: 'Open Sans', Helvetica, Arial, Verdana, sans-serif;
+}
+
+.progressbar,
+.progressblocks {
+  height: 4px;
+  min-height: 4px;
+  max-height: 4px;
+}
+
+#assec-widget-root {
+  @extend .relative;
+
+  width: 100vw;
+  height: 100vh;
+}
+
+#assec-widget {
+  height: 100%;
+}
+
+#assec-widget-footer .label {
+  // min-width: 70px;
+}
+
+/*
+body {
   overflow: hidden;
 }
 
 form {
   display: flex;
-}
-
-.shadowed {
-  box-shadow: 0 0 45px 0 rgba(0, 0, 0, 0.25);
 }
 
 .note {
@@ -127,3 +152,4 @@ form {
   width: 100%;
   height: 100%;
 }
+*/
