--- a/widget/src/scss/layouts/z-index.scss
+++ b/widget/src/scss/layouts/z-index.scss
@@ -1,26 +1,27 @@
 // z-index des zones de la carte
 // -> 1000
+$zindex-widget-popin: 9000;
 
 .assec-widget-popin {
-  z-index: 5000;
+  z-index: $zindex-widget-popin;
 }
 
-.tippy-popper {
-  z-index: 3000;
-}
-
-.leaflet-map-controls {
-  z-index: 2300;
-}
-
-.tippy-tooltip [x-circle] {
-  z-index: -1;
-}
-
-.leaflet-marker-divicon-pulse {
-  z-index: 2000;
-}
-
-#assec-widget-summary {
-  z-index: 4000;
-}
+// .tippy-popper {
+//   z-index: 3000;
+// }
+//
+// .leaflet-map-controls {
+//   z-index: 2300;
+// }
+//
+// .tippy-tooltip [x-circle] {
+//   z-index: -1;
+// }
+//
+// .leaflet-marker-divicon-pulse {
+//   z-index: 2000;
+// }
+//
+// #assec-widget-summary {
+//   z-index: 4000;
+// }
