--- a/widget/src/scss/styles.scss
+++ b/widget/src/scss/styles.scss
@@ -10,10 +10,10 @@
 
 // application
 @import './layouts/z-index.scss';
-@import './layouts/base.scss';
 @import './layouts/theme.scss';
+@import './layouts/form.scss';
+@import './layouts/base.scss';
 
-// @import './layouts/form.scss';
 // @import './layouts/tippy.scss';
 
 // map
@@ -21,4 +21,4 @@
 // @import './layouts/map-marker.scss';
 
 // responsive
-// @import './layouts/responsive.scss';
+@import './layouts/responsive.scss';
