--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -11,6 +11,28 @@ body {
   max-height: 4px;
 }
 
+.note {
+  font-size: 0.8em;
+  border-width: 1px;
+  border-radius: 4px;
+  border-style: solid;
+}
+
+.popin {
+  @extend .overlay;
+  @extend .absolute;
+  @extend .flex-columns;
+
+  .container {
+    @extend .relative;
+
+    width: auto;
+    height: auto;
+    margin: auto;
+    border-radius: 4px;
+  }
+}
+
 #assec-widget-root {
   @extend .relative;
 
@@ -26,6 +48,25 @@ body {
   // min-width: 70px;
 }
 
+#assec-widget-welcome-popin {
+  .container {
+    @extend .transparent;
+
+    width: 580px;
+  }
+
+  .title {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .note {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 /*
 body {
   overflow: hidden;
@@ -33,15 +74,6 @@ body {
 
 form {
   display: flex;
-}
-
-.note {
-  width: 100%;
-  padding: 12px;
-  font-size: 0.8em;
-  border-width: 1px;
-  border-radius: 4px;
-  border-style: solid;
 }
 
 .assec-widget-popin {
