--- a/widget/src/scss/layouts/form.scss
+++ b/widget/src/scss/layouts/form.scss
@@ -1,3 +1,34 @@
+button.action {
+  @extend .p20;
+  @extend .clearfix;
+
+  width: 170px;
+  font-size: 1.1em;
+  border-radius: 4px;
+  background-color: $white;
+
+  .icon {
+    float: left;
+  }
+
+  &.small {
+    font-size: 0.7em;
+  }
+
+  &.next {
+    @extend .shadowed;
+
+    color: $white;
+    background-color: $blue;
+    border: 1px solid $blue-dark;
+
+    .icon {
+      float: right;
+    }
+  }
+}
+
+/*
 .input-type-map {
   width: 100%;
   height: 100%;
@@ -23,3 +54,4 @@
     border-color: #CCCCCC;
   }
 }
+*/
