--- a/widget/src/scss/layouts/responsive.scss
+++ b/widget/src/scss/layouts/responsive.scss
@@ -1,3 +1,8 @@
-#assec-widget-summary {
-  background-color: #FFFFFF;
-}
+// @media screen and (max-width: 640px) {
+//   #assec-widget-welcome-popin {
+//     .container {
+//       width: auto;
+//       font-size: 0.8em;
+//     }
+//   }
+// }
