--- a/widget/src/scss/layouts/form.scss
+++ b/widget/src/scss/layouts/form.scss
@@ -34,6 +34,33 @@ button.action {
   }
 }
 
+/*
+.input-type-list {
+  width: 100%;
+
+  label {
+    width: 100%;
+  }
+}
+
+.input-type-choice {
+  label {
+    padding: 12px;
+    display: block;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 4px;
+    border-color: #CCCCCC;
+  }
+}
+*/
+
+/* ------------------------------------------------
+
+ MAP INPUT
+
+------------------------------------------------ */
+
 .input-type-map {
   width: 100%;
   height: 100%;
@@ -55,24 +82,3 @@ button.action {
     cursor: default;
   }
 }
-
-/*
-.input-type-list {
-  width: 100%;
-
-  label {
-    width: 100%;
-  }
-}
-
-.input-type-choice {
-  label {
-    padding: 12px;
-    display: block;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 4px;
-    border-color: #CCCCCC;
-  }
-}
-*/
