--- a/widget/src/scss/modules/map.scss
+++ b/widget/src/scss/modules/map.scss
@@ -1,3 +1,89 @@
+.leaflet-map-controls {
+  right: 12px;
+  bottom: 12px;
+  position: absolute;
+}
+
+/* <!-- Deplace les liens de copyright des layers en bas de la carte --> */
+.leaflet-bottom.leaflet-right {
+  right: inherit;
+}
+
+.leaflet-control-attribution {
+  opacity: 0.2;
+  float: inherit;
+  font-size: 0.8em;
+  background-color: transparent;
+}
+
+.leaflet-control-attribution a,
+.leaflet-control-attribution a:hover {
+  color: #000000;
+}
+
+/* ----------------------------------------------------
+
+ MAP MARKER
+
+---------------------------------------------------- */
+
+.geojson-layer {
+  fill: #FFFFFF;
+  stroke: #B7B7B7;
+  opacity: 0.3;
+  stroke-width: 1;
+  transition: all 0.5s;
+
+  &.normale {
+    // $level-alert-0
+    fill: $level-alert-0;
+    stroke: $level-alert-0;
+  }
+
+  &.vigilance {
+    // $level-alert-1
+    fill: $level-alert-1;
+    stroke: $level-alert-1;
+  }
+
+  &.alerte {
+    // $level-alert-2
+    fill: $level-alert-2;
+    stroke: $level-alert-2;
+  }
+
+  &.alerte-renforcee {
+    // $level-alert-3
+    fill: $level-alert-3;
+    stroke: $level-alert-3;
+  }
+
+  &.crise {
+    // $level-alert-4
+    fill: $level-alert-4;
+    stroke: $level-alert-4;
+  }
+
+  &:hover {
+    opacity: 0.65;
+  }
+
+  &.active {
+    opacity: 0.8;
+  }
+
+  &.department {
+    stroke: $black;
+    fill-opacity: 0;
+  }
+}
+
+/* ----------------------------------------------------
+
+ MAP MARKER
+
+---------------------------------------------------- */
+
 .leaflet-marker-divicon {
   position: relative;
 }
