--- a/widget/src/scss/_base.scss
+++ b/widget/src/scss/_base.scss
@@ -90,6 +90,7 @@ h6 {
 ------------------------------------------------------ */
 .clearfix {
   *zoom: 1;
+  overflow: auto;
 }
 
 .clearfix::after,
