--- a/widget/src/scss/layouts/form.scss
+++ b/widget/src/scss/layouts/form.scss
@@ -1,3 +1,5 @@
+$boder-color: #CCCCCC;
+
 form {
   width: 100%;
   height: 100%;
@@ -66,6 +68,7 @@ button.action {
   height: 100%;
   min-width: 100%;
   min-height: 100%;
+  border: 1px solid $boder-color;
 
   .popin .container {
     height: auto;
