--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -31,6 +31,12 @@ body {
     margin: auto;
     border-radius: 4px;
   }
+
+  > button.absolute {
+    width: 100%;
+    height: 100%;
+    cursor: default;
+  }
 }
 
 #assec-widget-root {
