--- a/widget/src/scss/layouts/form.scss
+++ b/widget/src/scss/layouts/form.scss
@@ -1,4 +1,5 @@
-$boder-color: #CCCCCC;
+$white: #FFFFFF;
+$border-color: #CCCCCC;
 
 form {
   width: 100%;
@@ -36,7 +37,6 @@ button.action {
   }
 }
 
-/*
 .input-type-list {
   width: 100%;
 
@@ -52,10 +52,9 @@ button.action {
     border-width: 1px;
     border-style: solid;
     border-radius: 4px;
-    border-color: #CCCCCC;
+    border-color: $border-color;
   }
 }
-*/
 
 /* ------------------------------------------------
 
@@ -68,7 +67,7 @@ button.action {
   height: 100%;
   min-width: 100%;
   min-height: 100%;
-  border: 1px solid $boder-color;
+  border: 1px solid $border-color;
 
   .popin .container {
     height: auto;
@@ -85,7 +84,7 @@ button.action {
     height: 100%;
     min-width: 100%;
     min-height: 100%;
-    background-color: #C4C4C4;
+    background-color: $border-color;
   }
 
   .leaflet-container {
