--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -4,6 +4,10 @@ body {
   font-family: 'Open Sans', Helvetica, Arial, Verdana, sans-serif;
 }
 
+button.spinner {
+  font-family: inherit;
+}
+
 .progressbar,
 .progressblocks {
   height: 4px;
@@ -50,10 +54,6 @@ body {
   height: 100%;
 }
 
-#assec-widget-footer .label {
-  // min-width: 70px;
-}
-
 #assec-widget-welcome-popin {
   .container {
     @extend .transparent;
@@ -72,122 +72,3 @@ body {
     margin-right: auto;
   }
 }
-
-/*
-body {
-  overflow: hidden;
-}
-
-form {
-  display: flex;
-}
-
-.assec-widget-popin {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  position: absolute;
-
-  .overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-  }
-
-  .container {
-    width: 80%;
-    height: 200px;
-    margin: 0 auto;
-    min-width: 180px;
-    max-width: 500px;
-    position: relative;
-    border-radius: 4px;
-  }
-
-  .overlay,
-  .container {
-    opacity: 0;
-    transition-duration: 1s;
-    transition-property: opacity;
-  }
-
-  .navigation button {
-    width: 170px;
-    border-radius: 4px;
-  }
-}
-
-.haspopin .assec-widget-popin .overlay,
-.haspopin .assec-widget-popin .container {
-  opacity: 1;
-}
-
-#assec-widget {
-  padding: 20px;
-  width: 100vw;
-  height: 100vh;
-  min-width: 200px;
-  overflow: hidden;
-  min-height: 350px;
-  position: relative;
-  border-radius: 4px;
-}
-
-#assec-widget-event-window {
-  flex: 1;
-  display: flex;
-  min-width: 100%;
-  min-height: 100%;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-}
-
-#assec-widget-summary {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  position: absolute;
-}
-
-#assec-widget-navigation {
-  height: 15px;
-  min-height: 15px;
-  max-height: 15px;
-  box-sizing: content-box;
-}
-
-#assec-widget-position {
-  min-width: 60px;
-  font-size: 0.8em;
-  box-sizing: content-box;
-}
-
-#assec-widget-progressbar {
-  height: 3px;
-  width: 100%;
-
-  .container {
-    width: 100%;
-    height: 3px;
-    min-height: 3px;
-  }
-
-  .container > * {
-    display: block;
-  }
-}
-
-#assec-widget-summary .question {
-  .title {
-    font-size: 1.2em;
-  }
-}
-
-#assec-widget-survey {
-  width: 100%;
-  height: 100%;
-}
-*/
