--- a/widget/src/scss/layouts/form.scss
+++ b/widget/src/scss/layouts/form.scss
@@ -1,6 +1,3 @@
-$white: #FFFFFF;
-$border-color: #CCCCCC;
-
 form {
   width: 100%;
   height: 100%;
@@ -13,7 +10,6 @@ button.action {
 
   font-size: 1.1em;
   border-radius: 4px;
-  background-color: $white;
 
   .icon {
     float: left;
@@ -23,16 +19,8 @@ button.action {
     font-size: 0.7em;
   }
 
-  &.next {
-    @extend .shadowed;
-
-    color: $white;
-    background-color: $blue;
-    border: 1px solid $blue-dark;
-
-    .icon {
-      float: right;
-    }
+  &.next .icon {
+    float: right;
   }
 }
 
@@ -44,15 +32,12 @@ button.action {
   }
 }
 
-.input-type-choice {
-  label {
-    padding: 12px;
-    display: block;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 4px;
-    border-color: $border-color;
-  }
+.input-type-choice label {
+  padding: 12px;
+  display: block;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 4px;
 }
 
 /* ------------------------------------------------
@@ -66,7 +51,6 @@ button.action {
   height: 100%;
   min-width: 100%;
   min-height: 100%;
-  border: 1px solid $border-color;
 
   .popin .container {
     height: auto;
@@ -74,12 +58,15 @@ button.action {
     background: transparent;
   }
 
+  .popin button.action {
+    @extend .shadowed;
+  }
+
   .leaflet-map {
     width: 100%;
     height: 100%;
     min-width: 100%;
     min-height: 100%;
-    background-color: $border-color;
   }
 
   .leaflet-container {
