--- a/widget/src/scss/layouts/z-index.scss
+++ b/widget/src/scss/layouts/z-index.scss
@@ -1,30 +1,26 @@
 // z-index des zones de la carte
 // -> 1000
 $zindex-popin: 9000;
+$zindex-tippy: 4000;
 $zindex-mapcontrols: 3000;
 $zindex-mapmarker: 2000;
+
+.tippy-tooltip [x-circle] {
+  z-index: -1;
+}
 
 .popin {
   z-index: $zindex-popin;
 }
 
-// .tippy-popper {
-//   z-index: 3000;
-// }
+.tippy-popper {
+  z-index: $zindex-tippy;
+}
 
 .leaflet-map-controls {
   z-index: $zindex-mapcontrols;
 }
 
-// .tippy-tooltip [x-circle] {
-//   z-index: -1;
-// }
-
 .leaflet-marker-divicon-pulse {
   z-index: $zindex-mapmarker;
 }
-
-//
-// #assec-widget-summary {
-//   z-index: 4000;
-// }
