--- a/widget/src/scss/layouts/theme.scss
+++ b/widget/src/scss/layouts/theme.scss
@@ -4,8 +4,10 @@ $header2: #843B61;
 
 $grey: #F7F8FA;
 $gray: #E4E8EE;
+$dark: #979897;
 $white: #FFFFFF;
 $black: #000000;
+$disabled: #F7F8FA;
 $border-color: #D7D8D8;
 
 $note: #FFF4CD;
@@ -47,12 +49,21 @@ $level-alert-4: #910AD7;
 
 button.action {
   background-color: $white;
+  transition-duration: 0.5s;
+  transition-property: color, background-color, border-color;
 
   &.next {
     color: $white;
     background-color: $blue;
     border: 1px solid $blue-dark;
   }
+}
+
+button.disabled,
+button:disabled {
+  color: $dark !important;
+  border: 1px solid $grey !important;
+  background-color: $grey !important;
 }
 
 .input-type-choice label {
