🚧 💅 update du bouton reset/back du formulaire

--- a/widget/src/scss/layouts/theme.scss
+++ b/widget/src/scss/layouts/theme.scss
@@ -36,15 +36,24 @@ $level-alert-4: #910AD7;
 
 ------------------------------------------------ */
 
-button.action {
-  background-color: $white;
-  transition-duration: 0.5s;
-  transition-property: color, background-color, border-color;
+button {
+  &.action {
+    background-color: $white;
+    transition-duration: 0.5s;
+    transition-property: color, background-color, border-color;
+  }
 
   &.next {
     color: $white;
     background-color: $blue;
     border: 1px solid $blue-dark;
+  }
+
+  &.previous {
+    padding: 12px;
+    color: $blue;
+    border: 1px solid $grey;
+    background-color: $disabled;
   }
 }
 
