🍿 [WIDGET] fix firefox pour la taille de la carte

--- a/widget/src/scss/layouts/theme.scss
+++ b/widget/src/scss/layouts/theme.scss
@@ -104,6 +104,8 @@ button:disabled {
 ------------------------------------------------ */
 
 .leaflet-map {
+  width: 100%;
+  height: 100%;
   background-color: $border-color;
 }
 
