🚧 🗄  [WIDGET] ajout des preferences si l'user est dejà inscrit à une alerte

--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -104,10 +104,11 @@ button.spinner {
 }
 
 #assec-widget-results .description div {
-  padding: 12px 7px;
+  padding: 20px;
 }
 
 #assec-widget-results .description p {
   margin-top: 7px;
   margin-bottom: 7px;
+  line-height: 1.25em;
 }
