--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -16,3 +16,7 @@
 @import './layouts/theme.scss';
 @import './layouts/zindex.scss';
 @import './layouts/shadowliner.scss';
+
+// responsive
+@import './layouts/tablet.scss';
+@import './layouts/mobile.scss';
