--- a/frontend/scss/layouts/mobile.scss
+++ b/frontend/scss/layouts/mobile.scss
@@ -1,7 +1,18 @@
 @media screen and (max-width: 640px) {
-  #main-navigation {
+  .hide-on-mobile,
+  .copy-to-clipboard {
+    top: 0 !important;
+    left: -9999999px !important;
+    width: 0;
+    height: 0;
+    font-size: 0;
+    max-width: 0;
+    max-height: 0;
     display: none;
+    line-height: 0;
+    overflow: hidden;
     visibility: hidden;
+    position: absolute !important;
   }
 
   #top-container {
@@ -45,6 +56,36 @@
     padding-top: 20px;
   }
 
+  #lames-container {
+    padding-top: 60px;
+    padding-bottom: 0;
+  }
+
+  #lames-container .lame {
+    margin: 0;
+    margin-bottom: 60px;
+    flex-direction: column;
+  }
+
+  #lames-container .lame .flex-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  #lames-container .lame .person-infos > * {
+    display: block;
+    margin-left: 0;
+  }
+
+  #lames-container .lame figure.large {
+    display: none;
+    visibility: hidden;
+    border: 0;
+    width: 100%;
+    height: 100px;
+    border-radius: 0;
+  }
+
   .newsletter-form label span {
     font-size: 0.9em;
   }
@@ -67,5 +108,46 @@
 
   .newsletter-form button[type='submit'] {
     border-radius: 0 0 12px 12px;
+  }
+
+  #qui-sommes-nous {
+    padding-bottom: 60px;
+  }
+
+  #qui-sommes-nous > .flex-columns {
+    padding-top: 0;
+    margin-bottom: 0;
+    flex-direction: column;
+  }
+
+  #nos-sponsors {
+    display: none;
+    visibility: hidden;
+  }
+
+  #notre-equipe {
+    margin-right: 0;
+  }
+
+  #main-footer {
+    text-align: center;
+    flex-direction: column;
+  }
+
+  #main-footer p + p {
+    margin-top: 12px;
+    font-weight: bold;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    left: 0;
+    top: 100%;
+    width: 100vh;
+    position: absolute;
+    overflow-x: hidden;
+    transform: rotate(-90deg);
+    transform-origin: left top;
   }
 }
