🚧 [FRONTEND] fix de la main navigation en mode sticky, utilisation d'un HOC

--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -255,6 +255,10 @@ figure {
     transition: height 0.5s;
   }
 
+  &.issticky {
+    @extend .pb20;
+  }
+
   &.issticky .col-left img {
     height: 40px;
   }
