--- a/frontend/scss/layouts/theme.scss
+++ b/frontend/scss/layouts/theme.scss
@@ -156,6 +156,7 @@ span.error {
   background-color: $color-disabled;
 }
 
+#main-navigation.mobile,
 #main-navigation.issticky {
   background-color: $white;
 }
