--- a/frontend/scss/_base.scss
+++ b/frontend/scss/_base.scss
@@ -191,3 +191,18 @@ iframe {
 .no-background {
   background: transparent;
 }
+
+.no-display {
+  top: 0 !important;
+  left: -9999999px !important;
+  width: 0;
+  height: 0;
+  font-size: 0;
+  max-width: 0;
+  max-height: 0;
+  display: none;
+  line-height: 0;
+  overflow: hidden;
+  visibility: hidden;
+  position: absolute !important;
+}
