🚧 [FRONTEND] fix de la position du bouton de fermeture de la popup de demo

--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -402,8 +402,8 @@ figure {
   }
 
   .close-popup-button {
-    top: 4%;
-    right: 8%;
+    right: 0;
+    top: -20px;
     position: absolute;
     background: transparent;
   }
