--- a/frontend/scss/layouts/mobile.scss
+++ b/frontend/scss/layouts/mobile.scss
@@ -117,7 +117,7 @@
   }
 
   #qui-sommes-nous {
-    padding-bottom: 60px;
+    padding-bottom: 20px;
   }
 
   #qui-sommes-nous > .flex-columns {
@@ -127,8 +127,19 @@
   }
 
   #nos-sponsors {
-    display: none;
-    visibility: hidden;
+    flex-wrap: wrap;
+    overflow: hidden;
+    margin-top: 80px;
+
+    img {
+      height: 40px;
+      max-width: 100%;
+      max-height: 40px;
+    }
+
+    .calltoaction {
+      font-size: 0.8em;
+    }
   }
 
   #notre-equipe {
