--- a/admin/src/static/fontello/css/fontello.css
+++ b/admin/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?26114385');
-  src: url('../font/fontello.eot?26114385#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?26114385') format('woff2'),
-       url('../font/fontello.woff?26114385') format('woff'),
-       url('../font/fontello.ttf?26114385') format('truetype'),
-       url('../font/fontello.svg?26114385#fontello') format('svg');
+  src: url('../font/fontello.eot?1096962');
+  src: url('../font/fontello.eot?1096962#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?1096962') format('woff2'),
+       url('../font/fontello.woff?1096962') format('woff'),
+       url('../font/fontello.ttf?1096962') format('truetype'),
+       url('../font/fontello.svg?1096962#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?26114385#fontello') format('svg');
+    src: url('../font/fontello.svg?1096962#fontello') format('svg');
   }
 }
 */
@@ -62,8 +62,7 @@
 .icon-floppy:before { content: '\e804'; } /* '' */
 .icon-users:before { content: '\e805'; } /* '' */
 .icon-user-add:before { content: '\e806'; } /* '' */
-.icon-globe:before { content: '\e807'; } /* '' */
-.icon-light-up:before { content: '\e808'; } /* '' */
+.icon-right-dir:before { content: '\e807'; } /* '' */
 .icon-attention:before { content: '\e809'; } /* '' */
 .icon-plus:before { content: '\e80a'; } /* '' */
 .icon-cancel-circled:before { content: '\e80b'; } /* '' */
@@ -94,9 +93,10 @@
 .icon-mail:before { content: '\e825'; } /* '' */
 .icon-feather:before { content: '\e826'; } /* '' */
 .icon-code:before { content: '\e827'; } /* '' */
-.icon-eye:before { content: '\e828'; } /* '' */
+.icon-left-dir:before { content: '\e828'; } /* '' */
 .icon-clipboard:before { content: '\e829'; } /* '' */
 .icon-list:before { content: '\e82a'; } /* '' */
+.icon-help:before { content: '\e82c'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
 .icon-town-hall:before { content: '\e83c'; } /* '' */
 .icon-marquee:before { content: '\e847'; } /* '' */
