--- a/frontend/scss/layouts/mobile.scss
+++ b/frontend/scss/layouts/mobile.scss
@@ -155,4 +155,13 @@
     margin-top: 12px;
     font-weight: bold;
   }
+
+  #demo-popup {
+    .inner {
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 0;
+    }
+  }
 }
