--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -57,6 +57,11 @@ button.spinner {
   height: 100%;
 }
 
+#assec-widget-content {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 #assec-widget-footer {
   height: 20px;
   max-height: 20px;
@@ -92,23 +97,44 @@ button.spinner {
  Affichage des restrictions depuis le backoffice
 
 ------------------------------------------ */
+#assec-widget-results {
+  overflow: hidden;
+}
+
+#assec-widget-results > .flex-columns {
+  max-height: 100%;
+}
+
+#assec-widget-results .results {
+  overflow: hidden;
+}
 
 #assec-widget-results .descriptions {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  max-width: 100%;
   max-height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 
 #assec-widget-results .description {
   margin: 0;
 }
 
+#assec-widget-results .description + .description {
+  margin-top: 20px;
+}
+
 #assec-widget-results .description div {
-  padding: 20px;
+  padding: 0;
 }
 
 #assec-widget-results .description p {
   margin-top: 7px;
   margin-bottom: 7px;
   line-height: 1.25em;
+}
+
+#results-view {
+  max-height: 100%;
 }
