🥁 try to fix static path

--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -219,7 +219,7 @@ figure {
   background-position: center center;
   // photoby Dominik Martin on Unsplash
   // https://unsplash.com/photos/YuVzPOBuuf0
-  background-image: url('/static/dominik-martin-675-unsplash.jpg');
+  // background-image: url('/static/dominik-martin-675-unsplash.jpg');
 }
 
 #main-navigation {
